--- a/app/templates/directives/ImageDetails.html
+++ b/app/templates/directives/ImageDetails.html
@@ -14,15 +14,23 @@
                 <td class="image-datetime-col">{{timestamp | date:'MM/dd/yyyy HH:mm'}}</td>
                 <td class="image-name-col">{{image.imageFilename}}</td>
                 <td class="image-exposure-col">{{image.exposure}}</td>
-                <td class="image-download-col"><a ng-show="image.downloaded" ng-href="{{image.tiffUrl}}" class="btn btn-sm icon-download-alt"/></td>
+                <td class="image-download-col">
+                    <a ng-show="image.downloaded" ng-href="{{image.tiffUrl}}" class="btn btn-sm icon-download-alt"/>
+                </td>
             </tr>
             </tbody>
         </table>
     </div>
     <div class="col-md-7 image-details-image">
         <div class="image-details-image-name">{{selectedImageName}}</div>
-        B:<div id="selected-image-brightness-slider"></div>
-        C:<div id="selected-image-contrast-slider"></div>
-        <span id="selected-image-canvas"></span>
+        <div class="image-details-image-adjust-box">
+            <div class="col-md-1 image-details-image-adjust-box-sliders">
+                B
+                <div id="selected-image-brightness-slider"></div>
+                C
+                <div id="selected-image-contrast-slider"></div>
+            </div>
+            <div class="col-lg-11 image-details-image-adjust-box-image" id="selected-image-canvas"></div>
+        </div>
     </div>
 </div>
