Moving some elements around in an attempt to fix a bug when there are more than one image panels

--- a/app/css/esp.css
+++ b/app/css/esp.css
@@ -149,11 +149,7 @@ body > .row {
     height: 100%;
 }
 
-.image-details-image-adjust-box-image {
-    height: 100%;
-}
-
-.image-details-image-adjust-box > canvas {
+.image-details-image-adjust-box canvas {
     display: block;
     margin-left: auto;
     margin-right: auto;
