--- a/app/templates/directives/ImageDetails.html
+++ b/app/templates/directives/ImageDetails.html
@@ -30,7 +30,9 @@
                 C
                 <div id="selected-image-contrast-slider"></div>
             </div>
-            <div class="col-lg-11 image-details-image-adjust-box-image" id="selected-image-canvas"></div>
+            <div class="col-lg-11">
+                <span id="selected-image-canvas"></span>
+            </div>
         </div>
     </div>
 </div>
