--- a/app/css/esp.css
+++ b/app/css/esp.css
@@ -174,6 +174,18 @@ body > .row {
     font-size: small;
 }
 
+.pcr-date-list {
+    list-style-type: none;
+    padding-left: 0px;
+    font-style: normal;
+}
+
+.pcr-date-list-item-label {
+    margin-top: 2px;
+    margin-bottom: 2px;
+    font-style: normal;
+}
+
 #pcr-graph-column {
     height: 100%;
     margin: 0px;
