--- a/app/templates/directives/PCRDetails.html
+++ b/app/templates/directives/PCRDetails.html
@@ -1,5 +1,5 @@
 <div class='row pcr-details-row'>
-    <div class="col-md-2 pcr-details-selection-list">
+    <div class="col-sm-2 pcr-details-selection-list">
         <div class="panel-group" id="pcr-accordion">
             <div class="panel panel-default" ng-repeat="(pcrType,pcrObject) in pcrTree">
                 <div class="panel-heading">
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-    <div id="pcr-graph-column" class="col-md-10">
+    <div id="pcr-graph-column" class="col-sm-10">
         <div class="btn-toolbar">
             <div class="btn-group">
                 <button type="button" class="btn btn-default btn-xs"
