--- a/app/css/esp-responsive.css
+++ b/app/css/esp-responsive.css
@@ -30,7 +30,7 @@
   }
 }
 #col-nav {
-  padding-right: 10px;
+  padding-right: 15px;
   padding-left: 0px;
   height: 200px;
 }
@@ -64,7 +64,7 @@
 }
 #col-graph {
   padding-left: 0px;
-  padding-right: 10px;
+  padding-right: 15px;
   height: 422px;
 }
 @media (min-width: 768px) {
@@ -92,7 +92,8 @@
   }
 }
 #col-detail {
-  padding: 0px;
+  padding-left: 0px;
+  padding-right: 15px;
   height: 400px;
 }
 @media (min-width: 768px) {
@@ -252,7 +253,7 @@
   height: auto !important;
 }
 #pcr-details-graph {
-  height: calc(100% -22px) !important;
+  height: calc(100% - 22px) !important;
   margin: 0px;
 }
 /* Styling for enabling the cloaking functions of AngularJS */
