--- a/app/css/esp-responsive.less
+++ b/app/css/esp-responsive.less
@@ -38,7 +38,7 @@ html, body {
 }
 
 #col-nav {
-  padding-right: 10px;
+  padding-right: 15px;
   padding-left: 0px;
   height: 200px;
   @media (min-width: 768px) {
@@ -75,7 +75,7 @@ html, body {
 
 #col-graph {
   padding-left: 0px;
-  padding-right: 10px;
+  padding-right: 15px;
   height: 422px;
   @media (min-width: 768px) {
     height: 100%;
@@ -107,7 +107,8 @@ html, body {
 }
 
 #col-detail {
-  padding: 0px;
+  padding-left: 0px;
+  padding-right: 15px;
   height: 400px;
   @media (min-width: 768px) {
     padding: 5px;
@@ -283,7 +284,7 @@ html, body {
 }
 
 #pcr-details-graph {
-  height: calc(~'100% -22px') !important;
+  height: calc(~'100% - 22px') !important;
   margin: 0px;
 }
 
