--- a/app/css/esp-responsive.less
+++ b/app/css/esp-responsive.less
@@ -170,6 +170,13 @@ html, body {
   }
 }
 
+.error-details-table {
+  overflow-y: scroll;
+  @media (min-width: 768px) {
+    padding-right: 2px;
+  }
+}
+
 .image-details-row {
   width: 100%;
 }
