Moved to bower package management

--- a/app/templates/directives/ImageDetails.html
+++ b/app/templates/directives/ImageDetails.html
@@ -15,7 +15,7 @@
                 <td class="image-name-col">{{image.imageFilename}}</td>
                 <td class="image-exposure-col">{{image.exposure}}</td>
                 <td class="image-download-col">
-                    <a ng-show="image.downloaded" ng-href="{{image.tiffUrl}}" class="btn btn-sm icon-download-alt"/>
+                    <a ng-show="image.downloaded" ng-href="{{image.tiffUrl}}" class="btn btn-sm fa fa-download"/>
                 </td>
             </tr>
             </tbody>
