updated mobile app

--- a/espmob/www/views/home/home.html
+++ b/espmob/www/views/home/home.html
@@ -1,5 +1,5 @@
 <ion-view view-title="ESP Deployments" hide-back-button="true">
     <ion-content>
-
+        <div id="map"/>
     </ion-content>
 </ion-view>
