--- a/app/templates/directives/ImageDetails.html
+++ b/app/templates/directives/ImageDetails.html
@@ -1,20 +1,20 @@
 <div class='row image-details-row'>
     <div class="col-sm-6 image-details-list">
-        <table class='table table-hover'>
+        <table class='table table-hover fixed-header image-table'>
             <thead>
             <tr>
-                <th class="image-datetime-col">Timestamp</th>
-                <th class="image-name-col">Name</th>
-                <th class="image-exposure-col">Exposure (sec)</th>
-                <th class="image-download-col">Download</th>
+                <th>Timestamp</th>
+                <th>Name</th>
+                <th>Exp (s)</th>
+                <th>Download</th>
             </tr>
             </thead>
             <tbody>
             <tr ng-repeat="(timestamp,image) in images" ng-click="handleClick(timestamp)">
-                <td class="image-datetime-col">{{timestamp | date:'MM/dd/yyyy HH:mm'}}</td>
-                <td class="image-name-col">{{image.imageFilename}}</td>
-                <td class="image-exposure-col">{{image.exposure}}</td>
-                <td class="image-download-col">
+                <td>{{timestamp | date:'MM/dd/yyyy HH:mm'}}</td>
+                <td>{{image.imageFilename}}</td>
+                <td>{{image.exposure}}</td>
+                <td>
                     <a ng-show="image.downloaded" ng-href="{{image.tiffUrl}}" class="btn btn-sm fa fa-download"/>
                 </td>
             </tr>
