--- a/app/templates/directives/ProtocolDetails.html
+++ b/app/templates/directives/ProtocolDetails.html
@@ -1,10 +1,10 @@
 <div class='protocol-details-table'>
-    <table class='table table-bordered'>
+    <table class='table table-bordered fixed-header protocol-table'>
         <thead>
         <tr>
             <th class="protocol-run-date-col">Date and Time</th>
             <th class="protocol-run-name-col">Name</th>
-            <th class="protocol-run-volume-col">Target Volume (ml)</th>
+            <th class="protocol-run-volume-col">Target<br/>Vol (ml)</th>
             <th class="protocol-run-actor-col">Run By</th>
         </tr>
         </thead>
