--- a/app/templates/directives/SampleDetails.html
+++ b/app/templates/directives/SampleDetails.html
@@ -1,13 +1,13 @@
 <div class='sample-details-table'>
-    <table class='table table-bordered'>
+    <table class='table table-bordered fixed-header sample-table'>
         <thead>
         <tr>
             <th class="sample-start-date-col">Start Date</th>
             <th class="sample-end-date-col">End Date</th>
-            <th class="sample-duration-col">Duration (minutes)</th>
-            <th class="sample-target-volume-col">Target Volume (ml)</th>
-            <th class="sample-actual-volume-col">Actual Volume (ml)</th>
-            <th class="sample-volume-diff-col">Difference (ml)</th>
+            <th class="sample-duration-col">Duration<br/>(minutes)</th>
+            <th class="sample-target-volume-col">Target<br/>Vol (ml)</th>
+            <th class="sample-actual-volume-col">Actual<br/>Vol (ml)</th>
+            <th class="sample-volume-diff-col">Diff (ml)</th>
         </tr>
         </thead>
         <tbody>
