--- a/app/css/esp-responsive.less
+++ b/app/css/esp-responsive.less
@@ -180,7 +180,6 @@ html, body {
     }
   }
   tbody {
-    height: ~"calc(100% - 32px)";
     display: block;
     overflow-y: scroll;
     tr {
@@ -190,24 +189,91 @@ html, body {
 }
 
 .protocol-details-table {
+  font-size: small;
   overflow-y: scroll;
   @media (min-width: 768px) {
     padding-right: 2px;
+  }
+}
+
+.protocol-table {
+  tbody {
+    height: ~"calc(100% - 52px)";
+  }
+  td:nth-child(1), th:nth-child(1) {
+    min-width: 200px;
+  }
+  td:nth-child(2), th:nth-child(2) {
+    min-width: 100px;
+  }
+  td:nth-child(3), th:nth-child(3) {
+    min-width: 75px;
+  }
+  td:nth-child(4), th:nth-child(4) {
+    min-width: 100px;
   }
 }
 
 .sample-details-table {
+  font-size: small;
   overflow-y: scroll;
   @media (min-width: 768px) {
     padding-right: 2px;
   }
 }
 
+.sample-table {
+  tbody {
+    height: ~"calc(100% - 52px)";
+  }
+  td:nth-child(1), th:nth-child(1) {
+    min-width: 200px;
+  }
+  td:nth-child(2), th:nth-child(2) {
+    min-width: 200px;
+  }
+  td:nth-child(3), th:nth-child(3) {
+    min-width: 100px;
+  }
+  td:nth-child(4), th:nth-child(4) {
+    min-width: 100px;
+  }
+  td:nth-child(5), th:nth-child(5) {
+    min-width: 100px;
+  }
+  td:nth-child(6), th:nth-child(6) {
+    min-width: 100px;
+  }
+}
+
 .error-details-table {
+  font-size: small;
   overflow-y: scroll;
   @media (min-width: 768px) {
     padding-right: 2px;
   }
+}
+
+.error-table {
+  tbody {
+    height: ~"calc(100% - 36px)";
+  }
+  td:nth-child(1), th:nth-child(1) {
+    min-width: 100px;
+  }
+  td:nth-child(2), th:nth-child(2) {
+    min-width: 100px;
+  }
+  td:nth-child(3), th:nth-child(3) {
+    min-width: 75px;
+  }
+  td:nth-child(4), th:nth-child(4) {
+    min-width: 100px;
+  }
+  td:nth-child(5), th:nth-child(5) {
+    min-width: 200px;
+  }
+  // The 6th column is the message and this gets to run free :)
 }
 
 .image-details-row {
@@ -215,18 +281,21 @@ html, body {
 }
 
 .image-details-list {
-  font-size: x-small;
+  font-size: small;
   overflow-x: hidden;
   height: 100%;
   padding-right: 0px;
 }
 
 .image-table {
+  tbody {
+    height: ~"calc(100% - 36px)";
+  }
   td:nth-child(1), th:nth-child(1) {
-    min-width: 100px;
+    min-width: 120px;
   }
   td:nth-child(2), th:nth-child(2) {
-    min-width: 175px;
+    min-width: 200px;
   }
   td:nth-child(3), th:nth-child(3) {
     min-width: 60px;
