Fixed bug with brightness and contrast sliders
I fixed the bug that would not show brightness and contrast sliders on other image detail tabs if one was already present.

--- a/app/templates/directives/ImageDetails.html
+++ b/app/templates/directives/ImageDetails.html
@@ -28,14 +28,14 @@
             </div>
         </div>
         <div class="row row-image-details-image-adjust-box">
-            <div id="image-details-adjust-box-sliders" class="col-sm-1 image-details-adjust-box-sliders">
+            <div id="{{deploymentID}}-image-details-adjust-box-sliders" class="col-sm-1 image-details-adjust-box-sliders">
                 B
-                <div id="selected-image-brightness-slider"></div>
+                <div id="{{deploymentID}}-selected-image-brightness-slider" style="height: 100px;"></div>
                 C
-                <div id="selected-image-contrast-slider"></div>
+                <div id="{{deploymentID}}-selected-image-contrast-slider" style="height: 100px;"></div>
             </div>
             <div class="col-sm-11 col-image-or-canvas">
-                <span id="selected-image-canvas"></span>
+                <span id="{{deploymentID}}-selected-image-canvas"></span>
             </div>
         </div>
     </div>
