--- a/espmob/www/css/style.css
+++ b/espmob/www/css/style.css
@@ -1,9 +1,14 @@
 /* Empty. Add your own CSS if you like */
+#deployment-selector {
+    height: 8%;
+    margin-bottom: 0px;
+}
 #map {
-    height: 100%;
-    width: 100%;
+    height: 92%;
+    /*width: 100%;*/
+    padding: 10px;
 }
 
-.scroll {
-    height: 100%;
-}
+/*.scroll {*/
+    /*height: 100%;*/
+/*}*/
