--- a/app/css/esp.css
+++ b/app/css/esp.css
@@ -15,6 +15,12 @@ body > .row {
     height: 50%;
 }
 
+/* Change the padding on the main bootstrap container */
+#container-main {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 /* For the left column that users can use to select items */
 #selection-column {
     height: 100%;
